# montecarlo

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conf.py  index.rst  justfile  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  conf.py  index.md  installation.md  requirements.txt  usage.md
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: api.md.txt  index.md.txt  installation.md.txt  usage.md.txt
src/montecarlo/: __init__.py  bitstring.py  cli.py  isingHamiltonian.py
tests/: test_montecarlo.py
